# cli-mcp-server

./: .gitignore  LICENSE  README.md  config.json  configuration_guide.md  pyproject.toml  recommended_dev_mcp_config.json  recommended_mcp_config.json  run-cli-mcp.bat  test_cli_mcp.py  test_cli_mcp_v2.py  test_config.py
src/cli_mcp_server/: __init__.py  server.py
