[project]
name = "cli-mcp-server"
version = "0.1.1"
description = "Command line interface for MCP clients with secure execution and customizable security policies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cli", "mcp", "security", "command-line", "execute", "console", "terminal"]
authors = [
    { name = "Mladen", email = "fangs-lever6n@icloud.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MladenSU/cli-mcp-server"
Documentation = "https://github.com/MladenSU/cli-mcp-server#readme"
Repository = "https://github.com/MladenSU/cli-mcp-server.git"
"Bug Tracker" = "https://github.com/MladenSU/cli-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli-mcp-server = "cli_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["cli_mcp_server"]